# pdf-crypt

./: .earthignore  .gitattributes  .gitignore  CONTRIBUTING.md  Earthfile  README.md  pdf_crypt.py  pyproject.toml
.github/workflows/: bundle-windows.yml  dist-windows.yml
pdf_crypt/: main.py
tests/: test_pdf_crypt.py
