[tool.poetry]
name = "pdf-crypt"
version = "0.1.0"
description = ""
authors = ["curiousleo <curiousleo@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pikepdf = "^2.11.4"
black = "^21.5b0"
pyinstaller = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
rope = "^0.19.0"
black = {version = "^21.5b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
